# manufact-for-mcp-python

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-ci-merge.yml
src/mcp_detect_mcp_python/: __init__.py
