[project]
name = "mcp-detect-mcp-python"
version = "0.1.0"
description = "Smoke-test fixture for repo framework detection (Python MCP SDK)."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_detect_mcp_python"]
